typescript/checker/tests/conformance/es6/yieldExpressions/generatorTypeCheck28.ts.stderr
error: unimplemented
expand_export_info(IterableIterator)
File: $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck28.ts
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck28.ts:2:1
  |
2 | / function* g(): IterableIterator<(x: string) => number> {
3 | |     yield * {
4 | |         *[Symbol.iterator]() {
5 | |             yield x => x.length;
6 | |         }
7 | |     };
8 | | }
  | |_^

error: ReturnRequired {
    span: Span {
        lo: BytePos(
            29,
        ),
        hi: BytePos(
            70,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/es6/yieldExpressions/generatorTypeCheck28.ts:2:14
  |
2 | function* g(): IterableIterator<(x: string) => number> {
  |              ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

